Ajustes finais para liberação da versão